kubernetes/ce-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learners-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: learners-frontend
  template:
    metadata:
      labels:
        app: learners-frontend
    spec:
      containers:
      - name: learners-frontend
        image: shenukacj/learners-frontend:1.0.1
        ports:
        - containerPort: 80
