kubernetes/dind-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dind-jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dind-jenkins
  template:
    metadata:
      labels:
        app: dind-jenkins
    spec:
      containers:
      - name: dind-jenkins
        image: docker:dind
        # command: [docker"]
        # args: ["info"]
        securityContext:
            privileged: true
        ports:
        - containerPort: 8084
        volumeMounts:
        - mountPath: /var/lib/docker/volumes
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: demo-pvc
