kubernetes/dind-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-dind-service2
spec:
  selector:
    app: dind-jenkins
  ports:
  - protocol: TCP
    port: 8084
    targetPort: 8084
  type: LoadBalancer

# shell into the dind pod and run the following comand
# docker run -p 8084:8080 -p 50000:50000 --restart=on-failure -v jenkins_home:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock shenukacj/jenkins-docker:1.0.1
